fix styling of list pages on IE7

--- a/app/assets/stylesheets/filteredlist.scss
+++ b/app/assets/stylesheets/filteredlist.scss
@@ -58,6 +58,7 @@
         ol {
           padding:0;
           margin:0;
+          list-style:none;
           
           li {
             border-bottom: 1px solid $grey-3;
